force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object to associate contact report with a user.</description>
    <label>Fundraiser Contact Report Relation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundraiser Contact Report Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>