force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/fields/ISUF_Title_formula__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Title_formula__c</fullName>
    <description>Pulls title from linked user to the contact manager row</description>
    <formula>ucinn_ascendv2__Fundraiser__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>