force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/fields/ucinn_ascendv2__Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Report__c</fullName>
    <label>Contact Report</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Fundraiser Contact Report Relations</relationshipLabel>
    <relationshipName>Fundraiser_Contact_Report_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>