force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/fields/ucinn_ascendv2__Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fundraiser_Contact_Report_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>