force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/fields/ucinn_ascendv2__Fundraiser_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Role__c</fullName>
    <label>Fundraiser Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Fundraiser</fullName>
                <default>true</default>
                <label>Contact Manager</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
            <value>
                <fullName>Secondary Fundraiser</fullName>
                <isActive>false</isActive>
                <label>Secondary Fundraiser</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>