force-app/main/default/objects/ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c/fields/ucinn_ascendv2__Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan</label>
    <referenceTo>ucinn_ascendv2__Work_Plan__c</referenceTo>
    <relationshipLabel>Fundraiser Contact Report Relations</relationshipLabel>
    <relationshipName>Fundraiser_Contact_Report_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>